Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/admin/bill_contact_numbers.xhtml
+++ b/src/main/webapp/admin/bill_contact_numbers.xhtml
@@ -34,7 +34,7 @@
                             <p:inputMask mask="999-9999999" maxlength="11" style="height: 20px;" value="#{searchController.uniqueSmsText}"></p:inputMask>
 
                             <p:commandButton id="btnSend" ajax="false" value="Send" action="#{searchController.sendSms()}"  />
-                            <p:commandButton id="btnSend2" ajax="false" value="Send All" action="#{searchController.sendSmsAll()}" disabled="true" />
+                            <p:commandButton id="btnSend2" ajax="false" value="Send All" action="#{searchController.sendSmsAll()}"  />
                         </h:panelGrid>
                     </f:facet>
                 </p:panel>
