Ruhunu Issues no 14-21 Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/institutions.xhtml
+++ b/src/main/webapp/channel/institutions.xhtml
@@ -44,7 +44,7 @@
                                         </h:commandButton>
 
                                         <h:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                    return false;" action="#{institutionController.delete()}"  value="Delete"  >
+                                                    return false;" action="#{institutionController.deleteAgency}"  value="Delete"  >
                                         </h:commandButton>
 
                                     </h:panelGrid>
