--- a/src/main/webapp/reportInstitution/report_cash_category_without_pro_day.xhtml
+++ b/src/main/webapp/reportInstitution/report_cash_category_without_pro_day.xhtml
@@ -152,13 +152,21 @@
 
             <p:spacer height="30"/>
 
-            <in:credit_collection_opd 
+            <in:credit_collection_opd_1 
+                id="credit_collection"/>
+
+            <p:spacer height="30"/>
+
+            <in:credit_collection_inward_1                 
+                id="credit_collection_inward"/>
+            .
+<!--            <in:credit_collection_opd 
                 id="credit_collection"/>
 
             <p:spacer height="30"/>
 
             <in:credit_collection_inward                 
-                id="credit_collection_inward"/>
+                id="credit_collection_inward"/>-->
 
             <p:spacer height="30"/>
 
