Channel Vat Change For Coop Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,7 +12,7 @@
 
 
                 <!--monthly channel and scan count-->
-                <script type="text/javascript">
+<!--                <script type="text/javascript">
                     google.charts.load('current', {packages: ['corechart', 'line']});
                     google.charts.setOnLoadCallback(drawCurveTypes);
 
@@ -32,7 +32,7 @@
                         chart.draw(data, options);
                     }
                 </script>
-                <!--daily income by doctor fee doctor vat-->
+                daily income by doctor fee doctor vat
                 <script type="text/javascript">
                     google.charts.load('current', {'packages': ['corechart']});
                     google.charts.setOnLoadCallback(drawChart);
@@ -47,7 +47,7 @@
                         chart.draw(data, options);
                     }
                 </script>
-                <!--channel method chart-->
+                channel method chart
                 <script type="text/javascript">
                     google.charts.load('current', {'packages': ['corechart']});
                     google.charts.setOnLoadCallback(drawChart);
@@ -62,7 +62,7 @@
                         chart.draw(data, options);
                     }
                 </script>
-                <!--daily pharmacy income-->
+                daily pharmacy income
                 <script type="text/javascript">
                     google.charts.load('current', {'packages': ['corechart']});
                     google.charts.setOnLoadCallback(drawChart);
@@ -77,7 +77,7 @@
                         chart.draw(data, options);
                     }
                 </script>
-                <!--daily opd income by category-->
+                daily opd income by category
                 <script type="text/javascript">
                     google.charts.load('current', {'packages': ['corechart']});
                     google.charts.setOnLoadCallback(drawChart);
@@ -92,7 +92,7 @@
                         chart.draw(data, options);
                     }
                 </script>
-                <!--collection center investigations count-->
+                collection center investigations count
                 <script type="text/javascript">
                     google.charts.load('current', {packages: ['corechart', 'bar']});
                     google.charts.setOnLoadCallback(drawBasic);
@@ -120,7 +120,7 @@
                         chart.draw(data, options);
                     }
                 </script>
-                <!--daily inward cash--> 
+                daily inward cash 
                 <script type="text/javascript">
                     google.charts.load('current', {'packages': ['corechart']});
                     google.charts.setOnLoadCallback(drawChart);
@@ -135,7 +135,7 @@
                         chart.draw(data, options);
                     }
                 </script>
-                <!--daily inward credit-->
+                daily inward credit
                 <script type="text/javascript">
                     google.charts.load('current', {'packages': ['corechart']});
                     google.charts.setOnLoadCallback(drawChart);
@@ -151,7 +151,7 @@
                     }
                 </script>
 
-                <!--total daily income by section-->
+                total daily income by section
                 <script type="text/javascript">
                     google.charts.load('current', {'packages': ['corechart']});
                     google.charts.setOnLoadCallback(drawChart);
@@ -238,7 +238,7 @@
 
                         </h:panelGrid>
                     </p:panel>
-                </center> 
+                </center> -->
 
 
 
