--- a/src/main/webapp/channel/channel_shedule.xhtml
+++ b/src/main/webapp/channel/channel_shedule.xhtml
@@ -141,6 +141,9 @@
 
                         <p:outputLabel value="Refundable"/>
                         <p:selectBooleanCheckbox value="#{sheduleController.current.refundable}"/>
+                        
+                        <p:outputLabel value="Vatable" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}" />
+                        <p:selectBooleanCheckbox value="#{sheduleController.current.vatable}" disabled="#{!webUserController.hasPrivilege('ChannelActiveVat')}" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}"/>
 
                         <p:outputLabel value="Credit Numbers"/>
                         <p:inputText autocomplete="off" value="#{sheduleController.current.creditNumbers}"/>
