--- a/src/main/webapp/dataAdmin/update_entered_data.xhtml
+++ b/src/main/webapp/dataAdmin/update_entered_data.xhtml
@@ -18,12 +18,12 @@
                             <p:panel header="OPD" rendered="false">
                                 <h:panelGrid columns="1">
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Reset Item Session Number Type" 
-                                                    action="#{pharmacyItemExcelManager.resetSessionBillNumberType()}" onclick="onSubmitButton();" />
+                                                     action="#{pharmacyItemExcelManager.resetSessionBillNumberType()}" onclick="onSubmitButton();" />
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Reset Channel Session Number" 
-                                                    action="#{sheduleController.resetSessionNumbers()}" onclick="onSubmitButton();" />
+                                                     action="#{sheduleController.resetSessionNumbers()}" onclick="onSubmitButton();" />
                                     <p:commandButton styleClass="linkButton" ajax="false"
                                                      value="Set Dept ID To Bills" 
-                                                    action="#{pharmacyItemExcelManager.updateBillDeptID()}" onclick="onSubmitButton();" />
+                                                     action="#{pharmacyItemExcelManager.updateBillDeptID()}" onclick="onSubmitButton();" />
                                 </h:panelGrid>
                             </p:panel>
                             <p:panel header="Pharmacy" rendered="false">                                 
@@ -41,23 +41,23 @@
                                     <p:commandButton styleClass="linkButton" ajax="false" 
                                                      rendered="false"
                                                      value="Reset Inward Charge Type " 
-                                                    action="#{pharmacyItemExcelManager.resetInwardChargeType()}" onclick="onSubmitButton();" />
+                                                     action="#{pharmacyItemExcelManager.resetInwardChargeType()}" onclick="onSubmitButton();" />
                                     <p:commandButton styleClass="linkButton" ajax="false" 
                                                      rendered="false"
                                                      value="Reset Paid Amount " 
-                                                    action="#{pharmacyItemExcelManager.resetFinalBillPaidValue()}" onclick="onSubmitButton();" />
+                                                     action="#{pharmacyItemExcelManager.resetFinalBillPaidValue()}" onclick="onSubmitButton();" />
                                     <p:commandButton styleClass="linkButton" ajax="false" 
                                                      rendered="false"
                                                      value="Set Credit Used Amount " 
-                                                    action="#{pharmacyItemExcelManager.restCreditUsedAmount()}" onclick="onSubmitButton();" />
+                                                     action="#{pharmacyItemExcelManager.restCreditUsedAmount()}" onclick="onSubmitButton();" />
                                     <p:commandButton styleClass="linkButton" ajax="false" 
                                                      rendered="false"
                                                      value="Set Margin,Discount,NetTotal To Bill " 
-                                                    action="#{pharmacyItemExcelManager.resetMarginAndDiscountAndNetTotal()}" onclick="onSubmitButton();" />
+                                                     action="#{pharmacyItemExcelManager.resetMarginAndDiscountAndNetTotal()}" onclick="onSubmitButton();" />
                                     <p:commandButton styleClass="linkButton" ajax="false" 
                                                      value="View Paid Value " 
                                                      rendered="false"
-                                                    action="#{pharmacyItemExcelManager.upadatePaidValueInBillFee()}" onclick="onSubmitButton();" />
+                                                     action="#{pharmacyItemExcelManager.upadatePaidValueInBillFee()}" onclick="onSubmitButton();" />
                                 </h:panelGrid>
 
                             </p:panel>
@@ -65,42 +65,50 @@
                                 <h:panelGrid columns="1">
                                     <p:commandButton styleClass="linkButton" ajax="false"
                                                      value="Remove Store Item" 
-                                                    action="#{pharmacyItemExcelManager.removeStoreItem()}" onclick="onSubmitButton();" rendered="false" />
+                                                     action="#{pharmacyItemExcelManager.removeStoreItem()}" onclick="onSubmitButton();" rendered="false" />
 
                                     <p:commandButton styleClass="linkButton" ajax="false"
                                                      value="Update Cancel Grn Net Totals" 
-                                                    action="#{pharmacyItemExcelManager.updateCancelGRN()}" onclick="onSubmitButton();" />
+                                                     action="#{pharmacyItemExcelManager.updateCancelGRN()}" onclick="onSubmitButton();" />
                                 </h:panelGrid>
                             </p:panel>
                             <p:panel header="HR" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
                                 <h:panelGrid columns="1">
                                     <p:commandButton styleClass="linkButton" ajax="false"
                                                      value="Set Roster To Staff Shift" 
-                                                    action="#{pharmacyItemExcelManager.updateStaffShiftWithRoster()}" 
+                                                     action="#{pharmacyItemExcelManager.updateStaffShiftWithRoster()}" 
                                                      onclick="onSubmitButton();" />
 
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Update Staff Code to Integer"
-                                                    action="#{staffController.updateCodeToIntege}"/>
+                                                     action="#{staffController.updateCodeToIntege}"/>
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Update Staff Shift Start End Time"
-                                                    action="#{staffShiftController.updateStaffShiftStartTimeAndEndTime}"/>                            
+                                                     action="#{staffShiftController.updateStaffShiftStartTimeAndEndTime}"/>                            
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Update Over Time Value Per Sec Staff Shift"
-                                                    action="#{hrReportController.updateOverTimeValuePerSecond}" rendered="false"/>
+                                                     action="#{hrReportController.updateOverTimeValuePerSecond}" rendered="false"/>
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Update Holiday Staff Shift"
-                                                    action="#{hrReportController.updateHoliday}" rendered="true"/>
+                                                     action="#{hrReportController.updateHoliday}" rendered="true"/>
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Update Automatic Leave Date"
-                                                    action="#{hrReportController.updateAutomaticData}" rendered="false"/>
+                                                     action="#{hrReportController.updateAutomaticData}" rendered="false"/>
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Update Late No Pay"
-                                                    action="#{hrReportController.updateLateLeaveData}" rendered="false"/>
+                                                     action="#{hrReportController.updateLateLeaveData}" rendered="false"/>
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Update Staff Paysheet Componet"
-                                                    action="#{hrReportController.updateStaffPaysheetComponent}"/>
+                                                     action="#{hrReportController.updateStaffPaysheetComponent}"/>
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Reset Automated Leave"
-                                                    action="#{hrReportController.resetSystemLeave()}"/>
+                                                     action="#{hrReportController.resetSystemLeave()}"/>
+                                </h:panelGrid>
+                            </p:panel>
+                            <p:panel header="Channel" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
+                                <h:panelGrid columns="1">
+                                    <p:commandButton styleClass="linkButton" ajax="false"
+                                                     value="Active Vat For All Channel Sessions" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}" 
+                                                     action="#{dataAdministrationController.createAllSessionAsVatable()}" 
+                                                     onclick="onSubmitButton();" />
                                 </h:panelGrid>
                             </p:panel>
 
                         </h:panelGrid>
                     </p:panel>
-                    
+
                 </h:form>
             </ui:define>
 
