qbformat added Signed-off-by: arunawijesinghe <acswijesinghe91@gmail.com>

--- a/src/main/webapp/reportInstitution/report_own.xhtml
+++ b/src/main/webapp/reportInstitution/report_own.xhtml
@@ -52,7 +52,10 @@
                                     <p:commandButton styleClass="linkButton" ajax="false" value="By Category Day End" action="report_cash_category_without_pro_day"/> 
                                     <p:commandButton styleClass="linkButton" ajax="false" value="By Category Month End" action="report_cash_category_without_pro_month"/>                             
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Category Vise Income" action="report_cash_catogory_summery"/>                             
+                                    <p:commandButton styleClass="linkButton" ajax="false" value="QB day income report " action="/qbReports/report_qb_day_income_with_out_professional"/>                             
+                                    <p:commandButton styleClass="linkButton" ajax="false" value="QB day  inward income report" action="/qbReports/report_qb_inward_income_by_credit_company"/>                             
                                 </p:panel>
+                               
                                 <p:panel header="5) Summary By Service Inward" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
                                     <h:panelGrid >                               
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Summary By Service - Added Date" action="report_inward_service_detail_added" /> 
