--- a/src/main/webapp/qbReports/report_qb_day_income_with_out_professional.xhtml
+++ b/src/main/webapp/qbReports/report_qb_day_income_with_out_professional.xhtml
@@ -40,6 +40,7 @@
                             <p:printer target="panelPrint" />
                         </p:commandButton>
                         <p:commandButton value="Excel" ajax="false" styleClass="noPrintButton" style="float: right;">
+                            <pe:exporter type="xlsx" target="tbl" fileName="QB_Export"/>
                         </p:commandButton>
                     </h:panelGrid>
 
@@ -48,136 +49,132 @@
             </p:panel>
 
             <p:panel styleClass="noBorder summeryBorder">
-            <p:dataTable value="#{quickBookReportController.quickBookFormats}" var="qbf" >
-                <p:columnGroup  type="header">
-                    <p:row>
-                        <p:column headerText="!TRANS"/>
-                        <p:column headerText="TRNSTYPE" />
-                        <p:column headerText="DATE" />
-                        <p:column headerText="ACCNT" />
-                        <p:column headerText="NAME" />
-                        <p:column headerText="INVITEMTYPE" />
-                        <p:column headerText="INVITEM" />
-                        <p:column headerText="AMOUNT" />
-                        <p:column headerText="DOCNUM" />
-                        <p:column headerText="PONUM"/>
-                        <p:column headerText="CLASS" />
-                        <p:column headerText="MEMO"/>
-                        <p:column headerText="CUSTFLD1"/>
-                        <p:column headerText="CUSTFLD2"/>
-                        <p:column headerText="CUSTFLD3"/>
-                    </p:row>
-                    <p:row>
-                        <p:column headerText="!SPL"/>
-                        <p:column headerText="TRNSTYPE" />
-                        <p:column headerText="DATE" />
-                        <p:column headerText="ACCNT" />
-                        <p:column headerText="NAME" />
-                        <p:column headerText="INVITEMTYPE" />
-                        <p:column headerText="INVITEM" />
-                        <p:column headerText="AMOUNT" />
-                        <p:column headerText="DOCNUM" />
-                        <p:column headerText="PONUM"/>
-                        <p:column headerText="CLASS" />
-                        <p:column headerText="MEMO"/>
-                        <p:column headerText="CUSTFLD1"/>
-                        <p:column headerText="CUSTFLD2"/>
-                        <p:column headerText="CUSTFLD3"/>
-                    </p:row>
-                    <p:row>
-                        <p:column headerText="!ENDTRNS"/>
-                        <p:column headerText="" />
-                        <p:column headerText="" />
-                        <p:column headerText="" />
-                        <p:column headerText="" />
-                        <p:column headerText="" />
-                        <p:column headerText="" />
-                        <p:column headerText="" />
-                        <p:column headerText="" />
-                        <p:column headerText=""/>
-                        <p:column headerText="" />
-                        <p:column headerText=""/>
-                        <p:column headerText=""/>
-                        <p:column headerText=""/>
-                        <p:column headerText=""/>
-                    </p:row>
-                </p:columnGroup> 
-                <p:column>
-
-                    <p:outputLabel value="#{qbf.rowType}"></p:outputLabel>
-                </p:column>
-                <p:column>
-
-                    <p:outputLabel value="#{qbf.trnsType}" ></p:outputLabel>
-                </p:column>
-                <p:column>
-
-                    <p:outputLabel value="#{qbf.date}"/> 
-                </p:column>
-                <p:column>
-
-                    <p:outputLabel value=" #{qbf.accnt}"></p:outputLabel>
-
-                </p:column>
-                <p:column>
-
-                    <p:outputLabel value=" #{qbf.name}"></p:outputLabel>
-
-                </p:column>
-                <p:column>
-
-                    <p:outputLabel value=" #{qbf.invItemType}"></p:outputLabel>
-
-                </p:column>
-                <p:column>
-
-                    <p:outputLabel value=" #{qbf.invItem}"></p:outputLabel>
-
-                </p:column>
-                <p:column>
-
-                    <p:outputLabel value=" #{qbf.amount}">
-                        <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
-                    </p:outputLabel>
-
-                </p:column>
-                <p:column>
-
-                    <p:outputLabel value=" #{qbf.docNum}"></p:outputLabel>
-
-                </p:column>
-                <p:column>
-
-                    <p:outputLabel value=" #{qbf.poNum}"></p:outputLabel>
-
-                </p:column>
-                <p:column>
-
-                    <p:outputLabel value=" #{qbf.qbClass}"></p:outputLabel>
-
-                </p:column>
-                <p:column>
-
-                    <p:outputLabel value=" #{qbf.memo}"></p:outputLabel>
-
-                </p:column>
-                <p:column>
-
-                    <p:outputLabel value=" #{qbf.custFld1}"></p:outputLabel>
-
-                </p:column>
-                <p:column>
-
-                    <p:outputLabel value=" #{qbf.custFld2}"></p:outputLabel>
-
-                </p:column>
-                <p:column>
-
-                    <p:outputLabel value=" #{qbf.custFld3}"></p:outputLabel>
-
-                </p:column>
-
-            </p:dataTable>
+                <p:dataTable id="tbl" value="#{quickBookReportController.quickBookFormats}" editable="true" var="qbf" >
+                    <p:columnGroup  type="header">
+                        <p:row>
+                            <p:column headerText="!TRANS"/>
+                            <p:column headerText="TRNSTYPE" />
+                            <p:column headerText="DATE" />
+                            <p:column headerText="ACCNT" />
+                            <p:column headerText="NAME" />
+                            <p:column headerText="INVITEMTYPE" />
+                            <p:column headerText="INVITEM" />
+                            <p:column headerText="AMOUNT" />
+                            <p:column headerText="DOCNUM" />
+                            <p:column headerText="PONUM"/>
+                            <p:column headerText="CLASS" />
+                            <p:column headerText="MEMO"/>
+                            <p:column headerText="CUSTFLD1"/>
+                            <p:column headerText="CUSTFLD2"/>
+                            <p:column headerText="CUSTFLD3"/>
+                            <p:column headerText=""/>
+                        </p:row>
+                        <p:row>
+                            <p:column headerText="!SPL"/>
+                            <p:column headerText="TRNSTYPE" />
+                            <p:column headerText="DATE" />
+                            <p:column headerText="ACCNT" />
+                            <p:column headerText="NAME" />
+                            <p:column headerText="INVITEMTYPE" />
+                            <p:column headerText="INVITEM" />
+                            <p:column headerText="AMOUNT" />
+                            <p:column headerText="DOCNUM" />
+                            <p:column headerText="PONUM"/>
+                            <p:column headerText="CLASS" />
+                            <p:column headerText="MEMO"/>
+                            <p:column headerText="CUSTFLD1"/>
+                            <p:column headerText="CUSTFLD2"/>
+                            <p:column headerText="CUSTFLD3"/>
+                            <p:column headerText=""/>
+                        </p:row>
+                        <p:row>
+                            <p:column headerText="!ENDTRNS"/>
+                            <p:column headerText="" />
+                            <p:column headerText="" />
+                            <p:column headerText="" />
+                            <p:column headerText="" />
+                            <p:column headerText="" />
+                            <p:column headerText="" />
+                            <p:column headerText="" />
+                            <p:column headerText="" />
+                            <p:column headerText=""/>
+                            <p:column headerText="" />
+                            <p:column headerText=""/>
+                            <p:column headerText=""/>
+                            <p:column headerText=""/>
+                            <p:column headerText=""/>
+                            <p:column headerText=""/>
+                        </p:row>
+                    </p:columnGroup> 
+                    <p:column>
+                        <p:outputLabel value="#{qbf.rowType}" />
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value="#{qbf.trnsType}" />
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value="#{qbf.date}" /> 
+                    </p:column>
+                    <p:column>
+                        <p:cellEditor rendered="#{qbf.editAccnt}">  
+                            <f:facet name="output"> 
+                                <h:outputLabel value="#{qbf.accnt}" />
+                            </f:facet>  
+                            <f:facet name="input">  
+                                <p:inputText value="#{qbf.accnt}" />
+                            </f:facet>  
+                        </p:cellEditor>  
+                        <p:outputLabel value="#{qbf.accnt}" rendered="#{!qbf.editAccnt}"/>
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value=" #{qbf.name}" />
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value=" #{qbf.invItemType}" />
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value=" #{qbf.invItem}" />
+                    </p:column>
+                    <p:column styleClass="numberCol" >
+                        <p:outputLabel value="#{qbf.amount}" rendered="#{qbf.amount ne 0.0}">
+                            <f:convertNumber pattern="#,##0.00" />
+                        </p:outputLabel>
+                        <p:outputLabel value="" rendered="#{qbf.amount eq 0.0}"/>
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value=" #{qbf.docNum}" />
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value=" #{qbf.poNum}" />
+                    </p:column>
+                    <p:column>
+                        <p:cellEditor rendered="#{qbf.editQbClass}">  
+                            <f:facet name="output"> 
+                                <h:outputLabel value="#{qbf.qbClass}" />
+                            </f:facet>  
+                            <f:facet name="input">  
+                                <p:inputText value="#{qbf.qbClass}" />
+                            </f:facet>  
+                        </p:cellEditor>  
+                        <p:outputLabel value="#{qbf.qbClass}" rendered="#{!qbf.editQbClass}"/>
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value="#{qbf.memo}" />
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value="#{qbf.custFld1}" />
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value="#{qbf.custFld2}" />
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value="#{qbf.custFld3}" />
+                    </p:column>
+                    <p:column style="width:6%" exportable="false">  
+                        <p:rowEditor rendered="#{qbf.editQbClass or qbf.editAccnt}"> 
+                        </p:rowEditor>
+                    </p:column>  
+                </p:dataTable>
             </p:panel>
         </h:form>
     </ui:define>
