--- a/src/main/webapp/reportInstitution/report_own.xhtml
+++ b/src/main/webapp/reportInstitution/report_own.xhtml
@@ -70,8 +70,8 @@
                                     </h:panelGrid>
                                 </p:panel>
                                 <p:panel header="11) Quick Book Reports" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
-                                    <p:commandButton styleClass="linkButton" ajax="false" value="QB day income report " action="/qbReports/report_qb_day_income_with_out_professional"/>                             
-                                    <p:commandButton styleClass="linkButton" ajax="false" value="QB day  inward income report" action="/qbReports/report_qb_inward_income_by_credit_company"/>                             
+                                    <p:commandButton styleClass="linkButton" ajax="false" value="QB day income report " action="/qbReports/report_qb_day_income_with_out_professional" actionListener="#{quickBookReportController.listnerReportNameChange}"/>                             
+                                    <!--<p:commandButton styleClass="linkButton" ajax="false" value="QB day  inward income report" action="/qbReports/report_qb_inward_income_by_credit_company"/>-->                             
                                 </p:panel>
 
                             </h:panelGrid>
